deploy: d3ec9a166191a780a8f98f972fa8e2b0a31e84f9

--- a/tutorials/d_basis_handling.ipynb
+++ b/tutorials/d_basis_handling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "46f75829",
+   "id": "3670afc9",
    "metadata": {},
    "source": [
     "# Basis Handling\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0255eed1",
+   "id": "7d8ade73",
    "metadata": {},
    "source": [
     "## Default basis\n",
@@ -23,13 +23,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9ffa596b",
+   "id": "14bc1936",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:09:34.390407Z",
-     "iopub.status.busy": "2024-06-13T11:09:34.390208Z",
-     "iopub.status.idle": "2024-06-13T11:09:38.690734Z",
-     "shell.execute_reply": "2024-06-13T11:09:38.690197Z"
+     "iopub.execute_input": "2024-06-13T11:32:39.253586Z",
+     "iopub.status.busy": "2024-06-13T11:32:39.253388Z",
+     "iopub.status.idle": "2024-06-13T11:32:43.400401Z",
+     "shell.execute_reply": "2024-06-13T11:32:43.399827Z"
     }
    },
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fac3debf",
+   "id": "7dba618a",
    "metadata": {},
    "source": [
     "Additionally, should you be unsure, the site basis is always given by appending \"_x\"."
@@ -54,13 +54,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "835382d7",
+   "id": "49bf08aa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:09:38.693770Z",
-     "iopub.status.busy": "2024-06-13T11:09:38.693271Z",
-     "iopub.status.idle": "2024-06-13T11:09:38.724326Z",
-     "shell.execute_reply": "2024-06-13T11:09:38.723715Z"
+     "iopub.execute_input": "2024-06-13T11:32:43.403075Z",
+     "iopub.status.busy": "2024-06-13T11:32:43.402766Z",
+     "iopub.status.idle": "2024-06-13T11:32:43.433367Z",
+     "shell.execute_reply": "2024-06-13T11:32:43.432686Z"
     }
    },
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ce08754",
+   "id": "f85dc9fe",
    "metadata": {},
    "source": [
     "There is also a built-in function for basis transformation"
@@ -87,13 +87,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a0153260",
+   "id": "aece8795",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:09:38.726818Z",
-     "iopub.status.busy": "2024-06-13T11:09:38.726432Z",
-     "iopub.status.idle": "2024-06-13T11:09:38.731693Z",
-     "shell.execute_reply": "2024-06-13T11:09:38.731174Z"
+     "iopub.execute_input": "2024-06-13T11:32:43.435973Z",
+     "iopub.status.busy": "2024-06-13T11:32:43.435574Z",
+     "iopub.status.idle": "2024-06-13T11:32:43.440778Z",
+     "shell.execute_reply": "2024-06-13T11:32:43.440212Z"
     }
    },
    "outputs": [
@@ -111,17 +111,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e448d96c",
+   "id": "59dd9bac",
    "metadata": {
     "lines_to_next_cell": 2
    },
    "source": [
-    "This is useful when transforming arrays of density matrices, because appending _e only works on attributes of the orbital list. As density matrices are a simulation output and not an attribute of the orbital list, appending _e will not work and a separate method is needed."
+    "This is useful when transforming arrays of density matrices, because appending _e only works on attributes of the orbital list. Density matrices are a simulation output and as such not an attribute of the orbital list. Appending _e to the variable name will thus not work and a separate method is needed."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1a745ead",
+   "id": "eea21adb",
    "metadata": {},
    "source": [
     "Transition dipole moments can be displayed in energy basis"
@@ -130,13 +130,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1f19717a",
+   "id": "02dcb7d3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:09:38.734261Z",
-     "iopub.status.busy": "2024-06-13T11:09:38.733901Z",
-     "iopub.status.idle": "2024-06-13T11:09:39.181959Z",
-     "shell.execute_reply": "2024-06-13T11:09:39.181292Z"
+     "iopub.execute_input": "2024-06-13T11:32:43.443300Z",
+     "iopub.status.busy": "2024-06-13T11:32:43.442817Z",
+     "iopub.status.idle": "2024-06-13T11:32:43.840141Z",
+     "shell.execute_reply": "2024-06-13T11:32:43.839459Z"
     }
    },
    "outputs": [
