--- a/tutorials/g_td_sim.ipynb
+++ b/tutorials/g_td_sim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b028b315",
+   "id": "96d2f5ee",
    "metadata": {},
    "source": [
     "# Time-Domain simulations\n"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "596f06b1",
+   "id": "48b170e8",
    "metadata": {},
    "source": [
     "We introduce time-domain simulations, which are based on GRANAD's default master equation"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a9b2a43",
+   "id": "391b6bf0",
    "metadata": {},
    "source": [
     "$$\\dot{\\rho}(t) = -i [H[t,\\rho(t)], \\rho] + \\mathcal{D}[t, \\rho]$$"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40ed6416",
+   "id": "f6996bf7",
    "metadata": {},
    "source": [
     "The non-linear Hamiltonian is given by"
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d46e12d6",
+   "id": "cf1f6809",
    "metadata": {},
    "source": [
     "$$H[t,\\rho(t)] = h^{0} + \\vec{E} \\vec{P} + C(\\rho(t) - \\rho^{0})$$"
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b74d8dfe",
+   "id": "619e55b7",
    "metadata": {},
    "source": [
     "where "
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e55151a3",
+   "id": "8987fea1",
    "metadata": {},
    "source": [
     "1. $h^{0}$ is the unperturbed or bare Hamiltonian constructed from localized orbitals.\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dba8f7f3",
+   "id": "022eb5d5",
    "metadata": {},
    "source": [
     "This expression is the dipole-gauge expression for the Hamiltonian including an external electric field $\\vec{E}$."
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb6933f7",
+   "id": "f433659e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e36bc321",
+   "id": "b04dc665",
    "metadata": {},
    "source": [
     "You can compute multiple observables in one simulation run"
@@ -87,13 +87,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "88ec1c7f",
+   "id": "3015b755",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:07:51.550534Z",
-     "iopub.status.busy": "2024-06-13T11:07:51.550338Z",
-     "iopub.status.idle": "2024-06-13T11:08:01.734561Z",
-     "shell.execute_reply": "2024-06-13T11:08:01.733991Z"
+     "iopub.execute_input": "2024-06-13T11:30:59.289629Z",
+     "iopub.status.busy": "2024-06-13T11:30:59.289429Z",
+     "iopub.status.idle": "2024-06-13T11:31:09.365875Z",
+     "shell.execute_reply": "2024-06-13T11:31:09.365257Z"
     }
    },
    "outputs": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc638d09",
+   "id": "09ba2ab5",
    "metadata": {},
    "source": [
     "The result object stores this info. Operators are concatenated in the order you passed them in."
@@ -149,13 +149,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f3791c80",
+   "id": "4879f5ef",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:08:01.737162Z",
-     "iopub.status.busy": "2024-06-13T11:08:01.736769Z",
-     "iopub.status.idle": "2024-06-13T11:08:01.740706Z",
-     "shell.execute_reply": "2024-06-13T11:08:01.740051Z"
+     "iopub.execute_input": "2024-06-13T11:31:09.368522Z",
+     "iopub.status.busy": "2024-06-13T11:31:09.368074Z",
+     "iopub.status.idle": "2024-06-13T11:31:09.372172Z",
+     "shell.execute_reply": "2024-06-13T11:31:09.371521Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1c7ee92",
+   "id": "b2dad700",
    "metadata": {},
    "source": [
     "The induced dipole moment at timestep 10 is given by"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1f85f70f",
+   "id": "5340e794",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:08:01.742931Z",
-     "iopub.status.busy": "2024-06-13T11:08:01.742580Z",
-     "iopub.status.idle": "2024-06-13T11:08:01.768543Z",
-     "shell.execute_reply": "2024-06-13T11:08:01.767961Z"
+     "iopub.execute_input": "2024-06-13T11:31:09.374401Z",
+     "iopub.status.busy": "2024-06-13T11:31:09.374044Z",
+     "iopub.status.idle": "2024-06-13T11:31:09.399509Z",
+     "shell.execute_reply": "2024-06-13T11:31:09.398927Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "687beb49",
+   "id": "d28719dc",
    "metadata": {},
    "source": [
     "Induced current at timestep 10"
@@ -217,13 +217,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4265323c",
+   "id": "aa5f5a6e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:08:01.771131Z",
-     "iopub.status.busy": "2024-06-13T11:08:01.770732Z",
-     "iopub.status.idle": "2024-06-13T11:08:01.775011Z",
-     "shell.execute_reply": "2024-06-13T11:08:01.774424Z"
+     "iopub.execute_input": "2024-06-13T11:31:09.402202Z",
+     "iopub.status.busy": "2024-06-13T11:31:09.401705Z",
+     "iopub.status.idle": "2024-06-13T11:31:09.407196Z",
+     "shell.execute_reply": "2024-06-13T11:31:09.406254Z"
     },
     "lines_to_next_cell": 2
    },
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ca083a4",
+   "id": "9ab7c613",
    "metadata": {},
    "source": [
     "We can access the Fourier transform as"
@@ -252,13 +252,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "24e8e7bd",
+   "id": "9918a1ff",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:08:01.777184Z",
-     "iopub.status.busy": "2024-06-13T11:08:01.776855Z",
-     "iopub.status.idle": "2024-06-13T11:08:02.090467Z",
-     "shell.execute_reply": "2024-06-13T11:08:02.089925Z"
+     "iopub.execute_input": "2024-06-13T11:31:09.410097Z",
+     "iopub.status.busy": "2024-06-13T11:31:09.409599Z",
+     "iopub.status.idle": "2024-06-13T11:31:09.724617Z",
+     "shell.execute_reply": "2024-06-13T11:31:09.724057Z"
     }
    },
    "outputs": [],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6c9e87d",
+   "id": "c33870fe",
    "metadata": {},
    "source": [
     "From the classical continuity equation, we have"
@@ -278,46 +278,47 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe8eaab8",
+   "id": "bf1c1901",
    "metadata": {},
    "source": [
-    "$$\\dot{\\rho}(x, t) = -\\nabla \\bf{j}(x, t) = \\dot{\\nabla \\bf{p}}(t) \\implies \\dot{\\bf{p}}(x,t) = \\bf{j}(x,t) \\implies \\omega \\bf{p}(\\omega) = \\bf{j}(\\omega)$$"
+    "$$\\dot{\\rho}(x, t) = -\\nabla \\vec{j}(x, t) = \\nabla \\dot{\\vec{p}}(t) \\implies \\dot{\\vec{p}}(x,t) = \\vec{j}(x,t) \\implies \\omega \\vec{p}(x, \\omega) = \\vec{j}(x, \\omega)$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f3e52944",
+   "id": "3fae86b9",
    "metadata": {},
    "source": [
-    "Integrating this equation spatially leads to"
+    "Or, in its integrated form"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7c38b434",
+   "id": "354be961",
    "metadata": {},
    "source": [
-    "$$\\rho(t) = j(t)$$"
+    "$$\\int dx \\dot{\\vec{p}}(x,t) = \\dot{\\vec{p}}(t) = \\int dx \\vec{j}(x,t) =  \\vec{j}(t)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ebe6f808",
+   "id": "88719657",
    "metadata": {},
    "source": [
-    "We can verify the spatially integrated version of this explicitly as follows"
+    "Where $\\vec{j}$ and $\\vec{p}$ are the total current and dipole moment respectively. As classical quantities are given by ensemble averages of quantum operators, we can\n",
+    "obtain these quantities directly from the time-domain simulations. The (integrated) continuity equation above can be verified as follows"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3dc8c411",
+   "id": "f8f074ad",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:08:02.093405Z",
-     "iopub.status.busy": "2024-06-13T11:08:02.093030Z",
-     "iopub.status.idle": "2024-06-13T11:08:02.524267Z",
-     "shell.execute_reply": "2024-06-13T11:08:02.523621Z"
+     "iopub.execute_input": "2024-06-13T11:31:09.727651Z",
+     "iopub.status.busy": "2024-06-13T11:31:09.727144Z",
+     "iopub.status.idle": "2024-06-13T11:31:10.154100Z",
+     "shell.execute_reply": "2024-06-13T11:31:10.153500Z"
     },
     "lines_to_next_cell": 2
    },
@@ -345,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fc576f6",
+   "id": "32266d5a",
    "metadata": {},
    "source": [
     "The field is also accessible"
@@ -354,13 +355,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a4d64550",
+   "id": "f004610c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:08:02.526634Z",
-     "iopub.status.busy": "2024-06-13T11:08:02.526434Z",
-     "iopub.status.idle": "2024-06-13T11:08:02.530208Z",
-     "shell.execute_reply": "2024-06-13T11:08:02.529604Z"
+     "iopub.execute_input": "2024-06-13T11:31:10.156644Z",
+     "iopub.status.busy": "2024-06-13T11:31:10.156286Z",
+     "iopub.status.idle": "2024-06-13T11:31:10.159954Z",
+     "shell.execute_reply": "2024-06-13T11:31:10.159292Z"
     }
    },
    "outputs": [
@@ -378,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbc8b3ff",
+   "id": "e43bb7d1",
    "metadata": {},
    "source": [
     "*WARNING: The following behavior might change and the density_matrix argument may be removed*"
@@ -386,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "950f2f78",
+   "id": "fa26a53c",
    "metadata": {},
    "source": [
     "## Density matrices"
@@ -394,22 +395,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e773e14",
+   "id": "02df7487",
    "metadata": {},
    "source": [
-    "If we want to only get density matrices, we can simply omit the operator list. The result object then contains a one-element list."
+    "If we want to only get density matrices, we can  omit the operator list. The result object then contains a one-element list."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ad0256a1",
+   "id": "9e0db49d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:08:02.532626Z",
-     "iopub.status.busy": "2024-06-13T11:08:02.532254Z",
-     "iopub.status.idle": "2024-06-13T11:08:05.174104Z",
-     "shell.execute_reply": "2024-06-13T11:08:05.173462Z"
+     "iopub.execute_input": "2024-06-13T11:31:10.162204Z",
+     "iopub.status.busy": "2024-06-13T11:31:10.161905Z",
+     "iopub.status.idle": "2024-06-13T11:31:12.775820Z",
+     "shell.execute_reply": "2024-06-13T11:31:12.775219Z"
     }
    },
    "outputs": [
@@ -450,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81bbaacb",
+   "id": "dee700b2",
    "metadata": {},
    "source": [
     "We can convert them to energy basis"
@@ -459,13 +460,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "83f588a2",
+   "id": "b08941a7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:08:05.176809Z",
-     "iopub.status.busy": "2024-06-13T11:08:05.176433Z",
-     "iopub.status.idle": "2024-06-13T11:08:07.090868Z",
-     "shell.execute_reply": "2024-06-13T11:08:07.090321Z"
+     "iopub.execute_input": "2024-06-13T11:31:12.778199Z",
+     "iopub.status.busy": "2024-06-13T11:31:12.777848Z",
+     "iopub.status.idle": "2024-06-13T11:31:14.677194Z",
+     "shell.execute_reply": "2024-06-13T11:31:14.676558Z"
     }
    },
    "outputs": [
@@ -484,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43935d0f",
+   "id": "69cb0f8a",
    "metadata": {},
    "source": [
     "## Occupations"
@@ -492,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "764bc140",
+   "id": "1f127590",
    "metadata": {},
    "source": [
     "We can extract only site occupations"
@@ -501,13 +502,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "73b392e8",
+   "id": "bc93fa91",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:08:07.093478Z",
-     "iopub.status.busy": "2024-06-13T11:08:07.093095Z",
-     "iopub.status.idle": "2024-06-13T11:08:09.807865Z",
-     "shell.execute_reply": "2024-06-13T11:08:09.807292Z"
+     "iopub.execute_input": "2024-06-13T11:31:14.679654Z",
+     "iopub.status.busy": "2024-06-13T11:31:14.679311Z",
+     "iopub.status.idle": "2024-06-13T11:31:17.341608Z",
+     "shell.execute_reply": "2024-06-13T11:31:17.340945Z"
     }
    },
    "outputs": [
@@ -548,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00bd32ff",
+   "id": "7fd8c8f5",
    "metadata": {},
    "source": [
     "We can extract only energy occupations"
@@ -556,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42e9dba0",
+   "id": "d52c913d",
    "metadata": {},
    "source": [
     "*DANGER*: this introduces additional cubic complexity "
@@ -565,13 +566,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3be3fcd7",
+   "id": "541f9518",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:08:09.810416Z",
-     "iopub.status.busy": "2024-06-13T11:08:09.810024Z",
-     "iopub.status.idle": "2024-06-13T11:08:17.406033Z",
-     "shell.execute_reply": "2024-06-13T11:08:17.405411Z"
+     "iopub.execute_input": "2024-06-13T11:31:17.344386Z",
+     "iopub.status.busy": "2024-06-13T11:31:17.343961Z",
+     "iopub.status.idle": "2024-06-13T11:31:24.877246Z",
+     "shell.execute_reply": "2024-06-13T11:31:24.876611Z"
     }
    },
    "outputs": [
@@ -631,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "594bb3c4",
+   "id": "2927bb03",
    "metadata": {},
    "source": [
     "## Combinations"
@@ -639,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51341f78",
+   "id": "e50ece0e",
    "metadata": {},
    "source": [
     "We can also extract multiple things at the same time"
@@ -648,13 +649,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f5c848e7",
+   "id": "ae549000",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:08:17.408522Z",
-     "iopub.status.busy": "2024-06-13T11:08:17.408314Z",
-     "iopub.status.idle": "2024-06-13T11:08:21.425877Z",
-     "shell.execute_reply": "2024-06-13T11:08:21.425299Z"
+     "iopub.execute_input": "2024-06-13T11:31:24.879845Z",
+     "iopub.status.busy": "2024-06-13T11:31:24.879601Z",
+     "iopub.status.idle": "2024-06-13T11:31:28.868575Z",
+     "shell.execute_reply": "2024-06-13T11:31:28.867928Z"
     }
    },
    "outputs": [
@@ -693,7 +694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0e70101",
+   "id": "1ff0b23b",
    "metadata": {},
    "source": [
     "The output will now contain three arrays: induced dipole moments, site occupations and full density matrices"
@@ -702,13 +703,13 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9c7031b8",
+   "id": "cc4397af",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:08:21.428521Z",
-     "iopub.status.busy": "2024-06-13T11:08:21.428144Z",
-     "iopub.status.idle": "2024-06-13T11:08:21.432211Z",
-     "shell.execute_reply": "2024-06-13T11:08:21.431563Z"
+     "iopub.execute_input": "2024-06-13T11:31:28.870968Z",
+     "iopub.status.busy": "2024-06-13T11:31:28.870618Z",
+     "iopub.status.idle": "2024-06-13T11:31:28.874590Z",
+     "shell.execute_reply": "2024-06-13T11:31:28.873990Z"
     }
    },
    "outputs": [
@@ -732,7 +733,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0eec354",
+   "id": "6728b167",
    "metadata": {},
    "source": [
     "## Automatic Convergence Check"
@@ -740,7 +741,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36d2dd53",
+   "id": "f8a2893b",
    "metadata": {},
    "source": [
     "TBD"
@@ -748,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eafb3c2e",
+   "id": "381391e9",
    "metadata": {},
    "source": [
     "## Parameters"
@@ -756,7 +757,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b6f1656",
+   "id": "4c40f668",
    "metadata": {},
    "source": [
     "TBD"
