--- a/tutorials/la_lindblad.ipynb
+++ b/tutorials/la_lindblad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8fc12a76",
+   "id": "2ba77bfa",
    "metadata": {},
    "source": [
     "# Lindblad Dissipation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9665b416",
+   "id": "d4a0fb22",
    "metadata": {},
    "source": [
     "To model dissipation in greater depth, GRANAD makes a Lindblad dissipation model available. The mathematical details are laid out in [Pelc et al., 2024](https://link.aps.org/doi/10.1103/PhysRevA.109.022237) and revolve around the following equation"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7823a861",
+   "id": "208a39aa",
    "metadata": {},
    "source": [
     "$$\\gamma_{ij}(t) = \\gamma_{ij} \\cdot f(t)$$"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d0c6ddd",
+   "id": "c6135f50",
    "metadata": {},
    "source": [
     "where $\\gamma_{ij}$ is the transition rate from state i to state j and $f$ is a relaxation functional to prevent breaking the Pauli principle (pushing more than 2 electrons into the same energetic state)."
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d4a8b7f",
+   "id": "d94313be",
    "metadata": {},
    "source": [
     "## Lindblad Relaxation dynamics of the Metallic Chain"
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6143a75",
+   "id": "79ec1a74",
    "metadata": {},
    "source": [
     "In the following, we will consider a metallic chain with a uniform transition rate."
@@ -51,13 +51,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b2a3ddc0",
+   "id": "b2769d40",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:09:17.534160Z",
-     "iopub.status.busy": "2024-06-13T11:09:17.533961Z",
-     "iopub.status.idle": "2024-06-13T11:09:22.425314Z",
-     "shell.execute_reply": "2024-06-13T11:09:22.424647Z"
+     "iopub.execute_input": "2024-06-13T11:32:22.538446Z",
+     "iopub.status.busy": "2024-06-13T11:32:22.537990Z",
+     "iopub.status.idle": "2024-06-13T11:32:27.289921Z",
+     "shell.execute_reply": "2024-06-13T11:32:27.289308Z"
     }
    },
    "outputs": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67112129",
+   "id": "5d8741fc",
    "metadata": {},
    "source": [
     "We can now build the matrix of transitions rates with a uniform rate of $\\gamma = 10$ as follows"
@@ -91,13 +91,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ce1e429c",
+   "id": "3ea18976",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:09:22.427878Z",
-     "iopub.status.busy": "2024-06-13T11:09:22.427485Z",
-     "iopub.status.idle": "2024-06-13T11:09:22.482370Z",
-     "shell.execute_reply": "2024-06-13T11:09:22.481728Z"
+     "iopub.execute_input": "2024-06-13T11:32:27.292509Z",
+     "iopub.status.busy": "2024-06-13T11:32:27.292263Z",
+     "iopub.status.idle": "2024-06-13T11:32:27.344436Z",
+     "shell.execute_reply": "2024-06-13T11:32:27.343841Z"
     }
    },
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddae3941",
+   "id": "faedc8f8",
    "metadata": {},
    "source": [
     "We can inspect the lumo-homo transition rate, for example, as"
@@ -118,13 +118,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9946ca9a",
+   "id": "be6d1400",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:09:22.485277Z",
-     "iopub.status.busy": "2024-06-13T11:09:22.484904Z",
-     "iopub.status.idle": "2024-06-13T11:09:22.513855Z",
-     "shell.execute_reply": "2024-06-13T11:09:22.513232Z"
+     "iopub.execute_input": "2024-06-13T11:32:27.347455Z",
+     "iopub.status.busy": "2024-06-13T11:32:27.346984Z",
+     "iopub.status.idle": "2024-06-13T11:32:27.375980Z",
+     "shell.execute_reply": "2024-06-13T11:32:27.375278Z"
     }
    },
    "outputs": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57719044",
+   "id": "bf600df2",
    "metadata": {},
    "source": [
     "GRANAD dispatches the non-hermitian functional depending on the `relaxation_rate` input type. If you pass a float, GRANAD uses the decoherence approximation. If you pass an array, it uses the Lindblad dissipator with a (smooth approximation of) the Heaviside function as the saturation functional. We will talk about how to modify the relaxation functional shortly."
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98c4b54e",
+   "id": "bd718f93",
    "metadata": {},
    "source": [
     "We now integrate the master equation."
@@ -159,13 +159,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f55e8893",
+   "id": "ddff9a96",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:09:22.516457Z",
-     "iopub.status.busy": "2024-06-13T11:09:22.515974Z",
-     "iopub.status.idle": "2024-06-13T11:09:24.452106Z",
-     "shell.execute_reply": "2024-06-13T11:09:24.451448Z"
+     "iopub.execute_input": "2024-06-13T11:32:27.378508Z",
+     "iopub.status.busy": "2024-06-13T11:32:27.378165Z",
+     "iopub.status.idle": "2024-06-13T11:32:29.244353Z",
+     "shell.execute_reply": "2024-06-13T11:32:29.243683Z"
     }
    },
    "outputs": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce542ad7",
+   "id": "55a1be9a",
    "metadata": {},
    "source": [
     "Comparing this to the phenomenological approach"
@@ -215,13 +215,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "664a1f02",
+   "id": "5940eb26",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:09:24.454796Z",
-     "iopub.status.busy": "2024-06-13T11:09:24.454399Z",
-     "iopub.status.idle": "2024-06-13T11:09:25.476293Z",
-     "shell.execute_reply": "2024-06-13T11:09:25.475745Z"
+     "iopub.execute_input": "2024-06-13T11:32:29.246910Z",
+     "iopub.status.busy": "2024-06-13T11:32:29.246412Z",
+     "iopub.status.idle": "2024-06-13T11:32:30.255229Z",
+     "shell.execute_reply": "2024-06-13T11:32:30.254617Z"
     }
    },
    "outputs": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bb51b09",
+   "id": "5784638a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "745558bd",
+   "id": "d3bd61a3",
    "metadata": {},
    "source": [
     "## Modifying the saturation functional"
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9aad291",
+   "id": "7529596c",
    "metadata": {},
    "source": [
     "The saturation functional can be customized by defining a saturation function and modifying the dissipator dict (for more information, please consult the tutorial on custom time evolution)."
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cb95769",
+   "id": "ad041873",
    "metadata": {},
    "source": [
     "In short, you"
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "465c083d",
+   "id": "35e5a9e1",
    "metadata": {},
    "source": [
     "1. initialize a dissipator with your custom relaxation functional\n",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39086070",
+   "id": "61554bea",
    "metadata": {},
    "source": [
     "We will study what happens if we completely turn off saturation "
@@ -313,13 +313,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fa99d52c",
+   "id": "3d512b37",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:09:25.478899Z",
-     "iopub.status.busy": "2024-06-13T11:09:25.478512Z",
-     "iopub.status.idle": "2024-06-13T11:09:27.482908Z",
-     "shell.execute_reply": "2024-06-13T11:09:27.482262Z"
+     "iopub.execute_input": "2024-06-13T11:32:30.258032Z",
+     "iopub.status.busy": "2024-06-13T11:32:30.257543Z",
+     "iopub.status.idle": "2024-06-13T11:32:32.251921Z",
+     "shell.execute_reply": "2024-06-13T11:32:32.251241Z"
     }
    },
    "outputs": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdea486b",
+   "id": "5583c7fe",
    "metadata": {},
    "source": [
     "We observe an almost complete collapse into the IP ground state, prohibited only by what we can quickly check to be an interaction effect."
@@ -375,13 +375,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3f8373d5",
+   "id": "8a4f6317",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:09:27.485433Z",
-     "iopub.status.busy": "2024-06-13T11:09:27.485073Z",
-     "iopub.status.idle": "2024-06-13T11:09:28.564939Z",
-     "shell.execute_reply": "2024-06-13T11:09:28.564305Z"
+     "iopub.execute_input": "2024-06-13T11:32:32.254357Z",
+     "iopub.status.busy": "2024-06-13T11:32:32.253969Z",
+     "iopub.status.idle": "2024-06-13T11:32:33.300196Z",
+     "shell.execute_reply": "2024-06-13T11:32:33.299635Z"
     }
    },
    "outputs": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ace7d5ce",
+   "id": "d38744f5",
    "metadata": {},
    "source": [
     "## Corrected Lindblad"
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b32f58b1",
+   "id": "6d601d7d",
    "metadata": {},
    "source": [
     "A precursor of the saturated Linblad model replaces $D[\\rho] \\rightarrow D[\\rho - \\rho_0]$, i.e. it applies the Lindblad operators to $\\rho - \\rho_0$, much like the phenomenological dissipator."
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "136936ca",
+   "id": "bb913f8e",
    "metadata": {},
    "source": [
     "It can be shown that this model for an $N$ electron system is equivalent to the phenomenological dissipator with relaxation rate $r$ if $\\gamma^{ij} = \\gamma = \\frac{r}{N}$. We can check this is as follows"
@@ -448,13 +448,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5886a48a",
+   "id": "c6d2700e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:09:28.567687Z",
-     "iopub.status.busy": "2024-06-13T11:09:28.567305Z",
-     "iopub.status.idle": "2024-06-13T11:09:29.668880Z",
-     "shell.execute_reply": "2024-06-13T11:09:29.668283Z"
+     "iopub.execute_input": "2024-06-13T11:32:33.302595Z",
+     "iopub.status.busy": "2024-06-13T11:32:33.302392Z",
+     "iopub.status.idle": "2024-06-13T11:32:34.400494Z",
+     "shell.execute_reply": "2024-06-13T11:32:34.399849Z"
     }
    },
    "outputs": [
@@ -462,7 +462,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RHS compiled\n",
+      "RHS compiled"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
       "RHS compiled\n"
      ]
     },
@@ -501,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2097ec89",
+   "id": "263f0660",
    "metadata": {},
    "source": [
     "We can now compare to the phenomenological dissipator with its rate scaled by $N$."
@@ -510,13 +517,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "400fc41d",
+   "id": "b90f75c6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:09:29.671382Z",
-     "iopub.status.busy": "2024-06-13T11:09:29.670987Z",
-     "iopub.status.idle": "2024-06-13T11:09:30.661711Z",
-     "shell.execute_reply": "2024-06-13T11:09:30.661128Z"
+     "iopub.execute_input": "2024-06-13T11:32:34.403154Z",
+     "iopub.status.busy": "2024-06-13T11:32:34.402798Z",
+     "iopub.status.idle": "2024-06-13T11:32:35.425591Z",
+     "shell.execute_reply": "2024-06-13T11:32:35.425019Z"
     },
     "lines_to_next_cell": 2
    },
@@ -557,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2627fb06",
+   "id": "6279206f",
    "metadata": {},
    "source": [
     "## Wigner-Weisskopf transition rates"
@@ -565,7 +572,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71123cca",
+   "id": "0083f97a",
    "metadata": {},
    "source": [
     "GRANAD also offers the IP wigner_weisskopf_transition_rates directly as a gamma matrix like"
@@ -574,13 +581,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a2e031a9",
+   "id": "14434569",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:09:30.664364Z",
-     "iopub.status.busy": "2024-06-13T11:09:30.663982Z",
-     "iopub.status.idle": "2024-06-13T11:09:30.939809Z",
-     "shell.execute_reply": "2024-06-13T11:09:30.939110Z"
+     "iopub.execute_input": "2024-06-13T11:32:35.428144Z",
+     "iopub.status.busy": "2024-06-13T11:32:35.427736Z",
+     "iopub.status.idle": "2024-06-13T11:32:35.699606Z",
+     "shell.execute_reply": "2024-06-13T11:32:35.698915Z"
     }
    },
    "outputs": [
@@ -604,7 +611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a57c0d5b",
+   "id": "71ef90f3",
    "metadata": {},
    "source": [
     "NOTE: things will likely break if you use these rates directly without rescaling them somehow. "
