--- a/tutorials/xyz.ipynb
+++ b/tutorials/xyz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a537c1b2",
+   "id": "5d028434",
    "metadata": {},
    "source": [
     "# Exporting and Importing\n"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b20d83e5",
+   "id": "79bd9680",
    "metadata": {},
    "source": [
     "GRANAD lets you save orbitals to xyz files. It also offers rudimentary support for loading orbitals from xyz files. For demonstration, we will create a triangular flake, print its xyz representation, save it to file and reload it."
@@ -19,13 +19,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9bb3473c",
+   "id": "b13d2d53",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:09:42.426124Z",
-     "iopub.status.busy": "2024-06-13T11:09:42.425671Z",
-     "iopub.status.idle": "2024-06-13T11:09:47.008042Z",
-     "shell.execute_reply": "2024-06-13T11:09:47.007304Z"
+     "iopub.execute_input": "2024-06-13T11:32:47.023137Z",
+     "iopub.status.busy": "2024-06-13T11:32:47.022944Z",
+     "iopub.status.idle": "2024-06-13T11:32:51.289629Z",
+     "shell.execute_reply": "2024-06-13T11:32:51.289010Z"
     }
    },
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c233a75",
+   "id": "fa800e0a",
    "metadata": {},
    "source": [
     "We can look at only the atoms in this file. They are given as a dictionary. The type of atom is the key. The value is all positions where atoms of this type are."
@@ -46,13 +46,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3c9c2373",
+   "id": "67da3463",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:09:47.010910Z",
-     "iopub.status.busy": "2024-06-13T11:09:47.010528Z",
-     "iopub.status.idle": "2024-06-13T11:09:47.028345Z",
-     "shell.execute_reply": "2024-06-13T11:09:47.027794Z"
+     "iopub.execute_input": "2024-06-13T11:32:51.292622Z",
+     "iopub.status.busy": "2024-06-13T11:32:51.292103Z",
+     "iopub.status.idle": "2024-06-13T11:32:51.308898Z",
+     "shell.execute_reply": "2024-06-13T11:32:51.308343Z"
     }
    },
    "outputs": [
@@ -70,22 +70,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4462675c",
+   "id": "91d447d1",
    "metadata": {},
    "source": [
-    "If you supply no name to the to_xyz method, it will just return the string"
+    "If you supply no name to the to_xyz method, it will  return the string"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "62bf5ba9",
+   "id": "aa8b0920",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:09:47.030746Z",
-     "iopub.status.busy": "2024-06-13T11:09:47.030381Z",
-     "iopub.status.idle": "2024-06-13T11:09:47.036917Z",
-     "shell.execute_reply": "2024-06-13T11:09:47.036433Z"
+     "iopub.execute_input": "2024-06-13T11:32:51.311198Z",
+     "iopub.status.busy": "2024-06-13T11:32:51.310902Z",
+     "iopub.status.idle": "2024-06-13T11:32:51.317121Z",
+     "shell.execute_reply": "2024-06-13T11:32:51.316635Z"
     }
    },
    "outputs": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bba8d049",
+   "id": "6e6e2b49",
    "metadata": {},
    "source": [
     "If you want to save this to a file, do"
@@ -160,13 +160,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3fabf899",
+   "id": "9a40b330",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:09:47.039202Z",
-     "iopub.status.busy": "2024-06-13T11:09:47.038799Z",
-     "iopub.status.idle": "2024-06-13T11:09:47.044787Z",
-     "shell.execute_reply": "2024-06-13T11:09:47.044347Z"
+     "iopub.execute_input": "2024-06-13T11:32:51.319357Z",
+     "iopub.status.busy": "2024-06-13T11:32:51.319003Z",
+     "iopub.status.idle": "2024-06-13T11:32:51.325388Z",
+     "shell.execute_reply": "2024-06-13T11:32:51.324819Z"
     }
    },
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f28be4e",
+   "id": "aaa5d925",
    "metadata": {},
    "source": [
     "You can also reload, although this is limited: all atoms in the xyz file get the same group id by default."
@@ -185,13 +185,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "169fda5e",
+   "id": "b5720ad0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:09:47.047063Z",
-     "iopub.status.busy": "2024-06-13T11:09:47.046709Z",
-     "iopub.status.idle": "2024-06-13T11:09:47.059583Z",
-     "shell.execute_reply": "2024-06-13T11:09:47.059112Z"
+     "iopub.execute_input": "2024-06-13T11:32:51.327821Z",
+     "iopub.status.busy": "2024-06-13T11:32:51.327481Z",
+     "iopub.status.idle": "2024-06-13T11:32:51.340654Z",
+     "shell.execute_reply": "2024-06-13T11:32:51.340046Z"
     }
    },
    "outputs": [],
