--- a/tutorials/i_linear_response.ipynb
+++ b/tutorials/i_linear_response.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bf95914e",
+   "id": "d22c17fe",
    "metadata": {},
    "source": [
     "# Linear response\n"
@@ -10,15 +10,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "670255ab",
+   "id": "8da5c274",
    "metadata": {},
    "source": [
-    "We will calculate the optical absorption in the RPA and compare it to TD simulations with a weak external field."
+    "We will calculate the optical absorption in the RPA and compare it to time-domain simulations with a weak external field."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4c0f0050",
+   "id": "dc08de95",
    "metadata": {},
    "source": [
     "## RPA"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49782d69",
+   "id": "6a4f3e83",
    "metadata": {},
    "source": [
     "First, we set up the RPA simulation. We will consider a small triangle such that the required simulation time stays in the seconds range."
@@ -35,13 +35,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7b4f0e05",
+   "id": "2a2c19f3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:07:01.452060Z",
-     "iopub.status.busy": "2024-06-13T11:07:01.451864Z",
-     "iopub.status.idle": "2024-06-13T11:07:06.453638Z",
-     "shell.execute_reply": "2024-06-13T11:07:06.453094Z"
+     "iopub.execute_input": "2024-06-13T11:30:10.293489Z",
+     "iopub.status.busy": "2024-06-13T11:30:10.293295Z",
+     "iopub.status.idle": "2024-06-13T11:30:15.191738Z",
+     "shell.execute_reply": "2024-06-13T11:30:15.191087Z"
     },
     "lines_to_next_cell": 2
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77b90859",
+   "id": "d4df06bb",
    "metadata": {},
    "source": [
     "We obtain the polarizability for an external $x$ polarized field and from its imaginary part the absorption."
@@ -82,13 +82,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2b500124",
+   "id": "90e69bb2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:07:06.456581Z",
-     "iopub.status.busy": "2024-06-13T11:07:06.456046Z",
-     "iopub.status.idle": "2024-06-13T11:07:17.010742Z",
-     "shell.execute_reply": "2024-06-13T11:07:17.010073Z"
+     "iopub.execute_input": "2024-06-13T11:30:15.194778Z",
+     "iopub.status.busy": "2024-06-13T11:30:15.194411Z",
+     "iopub.status.idle": "2024-06-13T11:30:25.590574Z",
+     "shell.execute_reply": "2024-06-13T11:30:25.589950Z"
     }
    },
    "outputs": [],
@@ -103,30 +103,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2e78646",
+   "id": "37da06ad",
    "metadata": {},
    "source": [
-    "## TD"
+    "## Time-domain simulations"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6e87dadb",
+   "id": "67b9370f",
    "metadata": {},
    "source": [
-    "For the TD simulations, we specify a spectrally broad external illumination (i.e. a narrow pulse in time domain) to capture the system's response over a large frequency range."
+    "For the time-domain simulations, we specify a spectrally broad external illumination (i.e. a narrow pulse in time domain) to capture the system's response over a large frequency range."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8f7edb0f",
+   "id": "32331af5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:07:17.014567Z",
-     "iopub.status.busy": "2024-06-13T11:07:17.014126Z",
-     "iopub.status.idle": "2024-06-13T11:07:17.061378Z",
-     "shell.execute_reply": "2024-06-13T11:07:17.060744Z"
+     "iopub.execute_input": "2024-06-13T11:30:25.594765Z",
+     "iopub.status.busy": "2024-06-13T11:30:25.593718Z",
+     "iopub.status.idle": "2024-06-13T11:30:25.640773Z",
+     "shell.execute_reply": "2024-06-13T11:30:25.639757Z"
     }
    },
    "outputs": [],
@@ -139,22 +139,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b3f37e2",
+   "id": "b0b5d4d9",
    "metadata": {},
    "source": [
-    "We then compute the TD dipole moment and Fourier transform it."
+    "We then compute the time-dependent dipole moment and Fourier transform it."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1ae198e6",
+   "id": "eceae7f6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:07:17.064465Z",
-     "iopub.status.busy": "2024-06-13T11:07:17.064084Z",
-     "iopub.status.idle": "2024-06-13T11:07:18.710235Z",
-     "shell.execute_reply": "2024-06-13T11:07:18.709675Z"
+     "iopub.execute_input": "2024-06-13T11:30:25.643739Z",
+     "iopub.status.busy": "2024-06-13T11:30:25.643400Z",
+     "iopub.status.idle": "2024-06-13T11:30:27.272545Z",
+     "shell.execute_reply": "2024-06-13T11:30:27.271944Z"
     }
    },
    "outputs": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e868939a",
+   "id": "cb0e16fb",
    "metadata": {},
    "source": [
     "The polarizability is given by $p / E$ (we only take the $x$ - component)."
@@ -194,13 +194,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9512d8de",
+   "id": "095614e8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:07:18.712793Z",
-     "iopub.status.busy": "2024-06-13T11:07:18.712403Z",
-     "iopub.status.idle": "2024-06-13T11:07:19.155747Z",
-     "shell.execute_reply": "2024-06-13T11:07:19.155208Z"
+     "iopub.execute_input": "2024-06-13T11:30:27.275069Z",
+     "iopub.status.busy": "2024-06-13T11:30:27.274621Z",
+     "iopub.status.idle": "2024-06-13T11:30:27.709327Z",
+     "shell.execute_reply": "2024-06-13T11:30:27.708781Z"
     }
    },
    "outputs": [],
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f2fd6f7",
+   "id": "67f5412a",
    "metadata": {},
    "source": [
     "We can now compare the two results."
@@ -223,13 +223,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c746df7f",
+   "id": "d112e3ba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-13T11:07:19.158679Z",
-     "iopub.status.busy": "2024-06-13T11:07:19.158134Z",
-     "iopub.status.idle": "2024-06-13T11:07:19.713603Z",
-     "shell.execute_reply": "2024-06-13T11:07:19.713031Z"
+     "iopub.execute_input": "2024-06-13T11:30:27.712101Z",
+     "iopub.status.busy": "2024-06-13T11:30:27.711726Z",
+     "iopub.status.idle": "2024-06-13T11:30:28.285092Z",
+     "shell.execute_reply": "2024-06-13T11:30:28.284466Z"
     },
     "lines_to_next_cell": 0
    },
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cc1ab0e",
+   "id": "0ded8031",
    "metadata": {},
    "outputs": [],
    "source": []
